--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,5 +46,11 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@svgr/webpack": "^8.1.0"
+    },
+    "overrides": {
+        "@svgr/webpack": "$@svgr/webpack"
     }
 }
