fix: resolve moderate severity vulnerability in postcss
- Updated postcss to version 8.4.40 to address the IPostCSS line return parsing error vulnerbility.
- Reference: https://github.com/advisories/GHSA-7fh5-64p2-3v2j

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,9 +48,11 @@
         ]
     },
     "devDependencies": {
-        "@svgr/webpack": "^8.1.0"
+        "@svgr/webpack": "^8.1.0",
+        "postcss": "^8.4.40"
     },
     "overrides": {
-        "@svgr/webpack": "$@svgr/webpack"
+        "@svgr/webpack": "$@svgr/webpack",
+        "postcss": "$postcss"
     }
 }
